--- a/WC总览一键懒人版（自用，未必适合每个人）.yaml
+++ b/WC总览一键懒人版（自用，未必适合每个人）.yaml
@@ -1,15 +1,15 @@
 backgroundOrder:
   - 11
+  - 19
+  - 18
+  - 44
+  - 45
   - 12
   - 14
   - 15
   - 16
-  - 45
   - 13
-  - 44
   - 52
-  - 19
-  - 18
   - 51
   - 9
   - 50
@@ -18,9 +18,10 @@ backgroundOrder:
   - 10
   - 17
   - 20
-  - 48
   - 21
+  - 48
   - 66
+  - 68
 backgroundStates:
   - 9
   - 10
@@ -64,11 +65,12 @@ flagOrder:
   - 14
   - 15
   - 16
-  - 45
   - 13
   - 44
+  - 45
   - 52
   - 51
+  - 68
   - 9
   - 50
   - 53
@@ -103,6 +105,7 @@ flagStates:
   - 51
   - 52
   - 53
+  - 68
 overviewColumns:
   - ALLIANCE
   - ANGULARVELOCITY
@@ -120,6 +123,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -137,6 +141,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 30
@@ -160,7 +165,10 @@ presets:
           - 4594
   - - <color=0xFFFFFF66>✜ 目标：[D]铁骑舰载机</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -180,7 +188,10 @@ presets:
           - 1653
   - - <color=0xFFFFFF66>✜ 目标：[D]所有无人机（+铁骑）</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -207,7 +218,10 @@ presets:
           - 1653
   - - <color=0xFFFFFF66>✜ 目标：[XL]大航</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -315,7 +329,7 @@ presets:
     - - - alwaysShownStates
         - []
       - - filteredStates
-        - []
+        - - 11
       - - groups
         - - 12
           - 25
@@ -365,6 +379,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -382,6 +397,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 90
@@ -397,7 +413,10 @@ presets:
           - 4088
   - - <color=0xFFFFCCFF>✈ 航行：空间站</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -452,7 +471,10 @@ presets:
           - 4644
   - - <color=0xFFFFFF66>✜ 目标：[S/M]轻拦/重拦</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -471,7 +493,10 @@ presets:
           - 894
   - - <color=0xFFFFFF66>✜ 目标：[XL]无畏</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -488,7 +513,10 @@ presets:
           - 4594
   - - <color=0xFFFFFF66>✜ 目标：[XL]大航/泰坦</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -505,7 +533,10 @@ presets:
           - 864
   - - <color=0xFF33FFFF>☭ 生产：挖矿</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1021,7 +1052,10 @@ presets:
           - 4673
   - - <color=0xFFFFFF66>✜ 目标：[S]指挥驱逐舰</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1054,6 +1088,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -1071,6 +1106,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 90
@@ -1091,6 +1127,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -1108,6 +1145,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 90
@@ -1127,6 +1165,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -1144,6 +1183,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 90
@@ -1159,7 +1199,10 @@ presets:
           - 4088
   - - <color=0xFF33FFFF>☭ 生产：打捞/残骸</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1242,7 +1285,10 @@ presets:
           - 4644
   - - <color=0xFFFFFF66>✜ 目标：[M]战列巡洋舰</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1260,7 +1306,10 @@ presets:
           - 1201
   - - <color=0xFFFF6666>✯ --- 作战：所有</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1767,6 +1816,7 @@ presets:
           - 52
           - 53
           - 66
+          - 68
       - - groups
         - - 6
           - 10
@@ -1851,6 +1901,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -1868,6 +1919,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 90
@@ -1883,7 +1935,10 @@ presets:
           - 4594
   - - <color=0xFFFF6666>✯ = 作战：只有舰船</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1942,7 +1997,10 @@ presets:
           - 4594
   - - <color=0xFFFFFF66>✜ 目标：[XL]FAX</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1958,7 +2016,10 @@ presets:
           - 1538
   - - <color=0xFFFFFF66>✜ 目标：[XL]小航</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1979,6 +2040,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -1996,6 +2058,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 90
@@ -2012,7 +2075,10 @@ presets:
           - 4088
   - - <color=0xFFFFFF66>✜ 目标：[XS]蛋</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2033,6 +2099,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -2050,6 +2117,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 30
@@ -2065,11 +2133,14 @@ presets:
           - 4088
   - - <color=0xFFFF6666>✯ 作战：宣战</color>
     - - - alwaysShownStates
-        - - 13
-          - 44
-      - - filteredStates
         - - 9
-          - 10
+          - 13
+          - 44
+          - 50
+          - 51
+          - 52
+      - - filteredStates
+        - - 10
           - 11
           - 12
           - 14
@@ -2085,11 +2156,9 @@ presets:
           - 45
           - 48
           - 49
-          - 50
-          - 51
-          - 52
           - 53
           - 66
+          - 68
       - - groups
         - - 6
           - 10
@@ -2331,7 +2400,10 @@ presets:
           - 4644
   - - <color=0xFFFFFF66>✜ 目标：[M]指挥舰/T3C</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2348,7 +2420,10 @@ presets:
           - 963
   - - <color=0xFFFFFF66>✜ 目标：[M]监视者级</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2364,7 +2439,10 @@ presets:
           - 1972
   - - <color=0xFFFFFF66>✜ 目标：[M]巡洋舰</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2386,7 +2464,10 @@ presets:
           - 963
   - - <color=0xFFFFFF66>✜ 目标：[S]护卫/驱逐</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2669,7 +2750,10 @@ presets:
           - 4644
   - - <color=0xFFFFFF66>✜ 目标：[XL]泰坦</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2690,6 +2774,7 @@ presets:
           - 14
           - 15
           - 16
+          - 45
       - - filteredStates
         - - 9
           - 10
@@ -2707,6 +2792,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 90
@@ -2721,7 +2807,10 @@ presets:
           - 4088
   - - <color=0xFFFFFF66>✜ 目标：[S/M]后勤</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2762,6 +2851,7 @@ presets:
           - 51
           - 52
           - 53
+          - 68
       - - groups
         - - 6
           - 10
@@ -2861,7 +2951,10 @@ presets:
           - 4644
   - - <color=0xFFFFFF66>✜ 目标：[XL]所有旗舰</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2887,6 +2980,10 @@ presets:
   - - <color=0xFFFF6666>✯ = 作战：小队战</color>
     - - - alwaysShownStates
         - - 11
+          - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 12
           - 14
@@ -2996,6 +3093,10 @@ presets:
   - - <color=0xFF33FFFF>☭ 生产：任务/深渊</color>
     - - - alwaysShownStates
         - - 11
+          - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 12
           - 14
@@ -4060,7 +4161,10 @@ presets:
           - 4673
   - - <color=0xFFFFFF66>✜ 目标：[M]侦察</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -4077,7 +4181,10 @@ presets:
           - 906
   - - <color=0xFFFFFF66>✜ 目标：[!]隐轰</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -4093,7 +4200,10 @@ presets:
           - 864
   - - <color=0xFFFFFF66>✜ 目标：[L]战列舰</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -4219,11 +4329,15 @@ stateBlinks:
     - true
   - - flag_44
     - true
+  - - flag_45
+    - true
   - - flag_50
     - false
   - - flag_51
     - true
   - - flag_52
+    - true
+  - - flag_68
     - true
   - - flag_9
     - true
@@ -4232,16 +4346,20 @@ stateColorsNameList:
     - white
   - - background_12
     - darkBlue
+  - - background_13
+    - orange
+  - - background_14
+    - darkBlue
   - - background_16
     - darkBlue
   - - background_18
-    - orange
+    - red
   - - background_20
     - white
   - - background_21
     - white
   - - background_44
-    - red
+    - turquoise
   - - background_45
     - darkTurquoise
   - - background_48
@@ -4253,9 +4371,11 @@ stateColorsNameList:
   - - background_51
     - orange
   - - background_52
-    - red
+    - orange
   - - background_66
     - blue
+  - - background_68
+    - black
   - - background_9
     - orange
   - - flag_45
@@ -4327,7 +4447,7 @@ tabSetup:
       - - name
         - ㅤ目标ㅤ
       - - overview
-        - <color=0xFFFFFF66>✜ 目标：[XL]所有旗舰</color>
+        - <color=0xFFFFFF66>✜ 目标：[D]所有无人机（+铁骑）</color>
       - - tabColumnOrder
         - - ICON
           - TAG
