--- a/WC总览/总览作战包.yaml
+++ b/WC总览/总览作战包.yaml
@@ -1,15 +1,15 @@
 backgroundOrder:
   - 11
+  - 19
+  - 18
+  - 44
+  - 45
   - 12
   - 14
   - 15
   - 16
-  - 45
   - 13
-  - 44
   - 52
-  - 19
-  - 18
   - 51
   - 9
   - 50
@@ -18,9 +18,10 @@ backgroundOrder:
   - 10
   - 17
   - 20
-  - 48
   - 21
+  - 48
   - 66
+  - 68
 backgroundStates:
   - 9
   - 10
@@ -64,11 +65,12 @@ flagOrder:
   - 14
   - 15
   - 16
-  - 45
   - 13
   - 44
+  - 45
   - 52
   - 51
+  - 68
   - 9
   - 50
   - 53
@@ -103,6 +105,7 @@ flagStates:
   - 51
   - 52
   - 53
+  - 68
 overviewColumns:
   - ALLIANCE
   - DISTANCE
@@ -113,7 +116,10 @@ overviewColumns:
 presets:
   - - <color=0xFFFF6666>✯ --- 作战：基本（+敌对 +NPC）</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -595,11 +601,14 @@ presets:
           - 4673
   - - <color=0xFFFF6666>✯ 作战：宣战</color>
     - - - alwaysShownStates
-        - - 13
-          - 44
-      - - filteredStates
         - - 9
-          - 10
+          - 13
+          - 44
+          - 50
+          - 51
+          - 52
+      - - filteredStates
+        - - 10
           - 11
           - 12
           - 14
@@ -615,11 +624,9 @@ presets:
           - 45
           - 48
           - 49
-          - 50
-          - 51
-          - 52
           - 53
           - 66
+          - 68
       - - groups
         - - 6
           - 10
@@ -861,7 +868,10 @@ presets:
           - 4644
   - - <color=0xFFFF6666>✯ --- 作战：基本（+敌对 -NPC）</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -1801,7 +1811,10 @@ presets:
           - 4673
   - - <color=0xFFFF6666>✯ = 作战：只有舰船</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -2009,11 +2022,15 @@ stateBlinks:
     - true
   - - flag_44
     - true
+  - - flag_45
+    - true
   - - flag_50
     - false
   - - flag_51
     - true
   - - flag_52
+    - true
+  - - flag_68
     - true
   - - flag_9
     - true
@@ -2022,16 +2039,20 @@ stateColorsNameList:
     - white
   - - background_12
     - darkBlue
+  - - background_13
+    - orange
+  - - background_14
+    - darkBlue
   - - background_16
     - darkBlue
   - - background_18
-    - orange
+    - red
   - - background_20
     - white
   - - background_21
     - white
   - - background_44
-    - red
+    - turquoise
   - - background_45
     - darkTurquoise
   - - background_48
@@ -2043,9 +2064,11 @@ stateColorsNameList:
   - - background_51
     - orange
   - - background_52
-    - red
+    - orange
   - - background_66
     - blue
+  - - background_68
+    - black
   - - background_9
     - orange
   - - flag_45
