--- a/WC总览/总览核心.yaml
+++ b/WC总览/总览核心.yaml
@@ -1,15 +1,15 @@
 backgroundOrder:
   - 11
+  - 19
+  - 18
+  - 44
+  - 45
   - 12
   - 14
   - 15
   - 16
-  - 45
   - 13
-  - 44
   - 52
-  - 19
-  - 18
   - 51
   - 9
   - 50
@@ -18,9 +18,10 @@ backgroundOrder:
   - 10
   - 17
   - 20
-  - 48
   - 21
+  - 48
   - 66
+  - 68
 backgroundStates:
   - 9
   - 10
@@ -64,11 +65,12 @@ flagOrder:
   - 14
   - 15
   - 16
-  - 45
   - 13
   - 44
+  - 45
   - 52
   - 51
+  - 68
   - 9
   - 50
   - 53
@@ -103,6 +105,7 @@ flagStates:
   - 51
   - 52
   - 53
+  - 68
 overviewColumns:
   - ALLIANCE
   - DISTANCE
@@ -2482,7 +2485,10 @@ presets:
           - 4644
   - - <color=0xFFFFCCFF>✈ 航行：空间站</color>
     - - - alwaysShownStates
-        - []
+        - - 13
+          - 18
+          - 19
+          - 44
       - - filteredStates
         - - 11
           - 12
@@ -3617,10 +3623,15 @@ presets:
           - 1106
           - 1404
           - 1406
+          - 1408
           - 1657
+          - 2015
+          - 2016
+          - 2017
           - 4081
           - 4547
           - 4549
+          - 4644
 shipLabelOrder:
   - ship type
   - alliance
@@ -3772,11 +3783,15 @@ stateBlinks:
     - true
   - - flag_44
     - true
+  - - flag_45
+    - true
   - - flag_50
     - false
   - - flag_51
     - true
   - - flag_52
+    - true
+  - - flag_68
     - true
   - - flag_9
     - true
@@ -3785,16 +3800,20 @@ stateColorsNameList:
     - white
   - - background_12
     - darkBlue
+  - - background_13
+    - orange
+  - - background_14
+    - darkBlue
   - - background_16
     - darkBlue
   - - background_18
-    - orange
+    - red
   - - background_20
     - white
   - - background_21
     - white
   - - background_44
-    - red
+    - turquoise
   - - background_45
     - darkTurquoise
   - - background_48
@@ -3806,9 +3825,11 @@ stateColorsNameList:
   - - background_51
     - orange
   - - background_52
-    - red
+    - orange
   - - background_66
     - blue
+  - - background_68
+    - black
   - - background_9
     - orange
   - - flag_45
